<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StockReader</string>
    <string name="action_settings">Settings</string>
    <string name="add_new">Add</string>
    <string name="edit">Edit</string>
    <string name="ok"> @android:string/ok</string>
    <string name="cancel"> @android:string/cancel</string>
    <string name="main_watch_list">Observer list</string>
    <string name="main_add_stock_dialog">"Stock name / number"</string>
    <string name="stock_not_found">Stock not found</string>
    <string name="delete">Delete</string>
    <string name="update_period">Update interval</string>
    <string name="enable_update">Enable update</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="last_update_time">Last updated</string>
    <string name="market">market</string>
    <string name="name">name</string>
    <string name="stop_when_screen_of">Stop updating when screen off</string>
    <string name="start_when_boot_up">Start updating when boot up</string>

</resources>