<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:background="@drawable/dialog_white_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp" >

    <Spinner
        android:id="@+id/main_add_dialog_spinner"
        style="@style/btnStyleBeige"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/main_add_dialog_stock_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/main_add_stock_dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/main_add_dialog_ok"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:text="@string/ok" />

        <Button
            android:id="@+id/main_add_dialog_cancel"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>