<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/main_watch_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/main_watch_list"
        android:textSize="26sp" />

    <FrameLayout
        android:id="@+id/ffl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_watch_txt"
        android:layout_gravity="center"
        android:layout_margin="10dp" >

        <LinearLayout
            android:id="@+id/layout_normal_mode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_add_new"
                style="@style/btnStyleBreakerBay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:text="@string/add_new" />

            <Button
                android:id="@+id/btn_edit"
                style="@style/btnStyleBreakerBay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:text="@string/edit" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_edit_mode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone" >

            <Button
                android:id="@+id/btn_ok"
                style="@style/btnStyleBreakerBay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/ok" />

        </LinearLayout>
    </FrameLayout>

    <ListView
        android:id="@+id/stock_data_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/ffl"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:background="@drawable/custom_btn_beige"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="0.2" >
    </ListView>

</RelativeLayout>